...
  String get settingsWordLimitHint => '5000';

  @override
  String get settingsTargetLanguageHint => 'لغة الهدف';

  @override
  String get settingsAppLanguage => 'لغة التطبيق';

  @override
  String get settingsAppLanguageSystem => 'حسب النظام';

  @override
  String get settingsAppLanguageTitle => 'لغة التطبيق';
...
